<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/bu2"
            android:paddingLeft="@dimen/bu2"
            android:paddingRight="@dimen/bu2"
            android:paddingTop="@dimen/bu2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_dialog_main_description"
                android:layout_marginBottom="@dimen/bu1"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_30px" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bu0_5"
                android:layout_marginTop="@dimen/bu0_5"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/bu6"
                    android:layout_height="@dimen/bu6"
                    android:scaleType="fitXY"
                    android:src="@drawable/icon_distance" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/bu1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cell_title_distance"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_36px"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/help_dialog_distance_description"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_30px" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/help_dialog_distance_example"
                        android:textColor="@color/greycc"
                        android:textSize="@dimen/text_size_30px" />

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bu0_5"
                android:layout_marginTop="@dimen/bu0_5"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/bu6"
                    android:layout_height="@dimen/bu6"
                    android:scaleType="fitXY"
                    android:src="@drawable/icon_consumption" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/bu1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cell_title_consumption"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_36px"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/help_dialog_consumption_description"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_30px" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/help_dialog_consumption_example"
                        android:textColor="@color/greycc"
                        android:textSize="@dimen/text_size_30px" />

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bu0_5"
                android:layout_marginTop="@dimen/bu0_5"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/bu6"
                    android:layout_height="@dimen/bu6"
                    android:scaleType="fitXY"
                    android:src="@drawable/icon_price" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/bu1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cell_title_price"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_36px"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/help_dialog_price_description"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_30px" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/help_dialog_price_example"
                        android:textColor="@color/greycc"
                        android:textSize="@dimen/text_size_30px" />

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bu0_5"
                android:layout_marginTop="@dimen/bu0_5"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/bu6"
                    android:layout_height="@dimen/bu6"
                    android:scaleType="fitXY"
                    android:src="@drawable/icon_people" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/bu1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cell_title_people"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_36px"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/help_dialog_people_description"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_30px" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/help_dialog_people_example"
                        android:textColor="@color/greycc"
                        android:textSize="@dimen/text_size_30px" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</RelativeLayout>
