<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/bu2"
        android:text="@string/result_dialog_title"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_43px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bu20"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/total_sum_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_180px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-24dp"
            android:text="@string/currency"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_100px" />

    </LinearLayout>

    <TextView
        android:id="@+id/passenger_sum_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bu1"
        android:layout_marginLeft="@dimen/bu3"
        android:layout_marginRight="@dimen/bu3"
        android:gravity="center"
        android:text="@string/result_dialog_description"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_36px" />


</LinearLayout>
